syntax = "proto3";
package pb;
option go_package = ".;pb";

message User {
    int64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string documentNumber = 5;
    string cellPhone = 6; 
}

message UserResultStream {
    string status = 1;
    User user = 2;
}

message Users {
    repeated User user = 1;
}

service UserService {
    rpc AddUser (User) returns (User);
    rpc AddUserVerbose (User) returns (stream UserResultStream);
    rpc AddUsers (stream User) returns (Users);
    rpc AddUserStreamBoth (stream User) returns (stream UserResultStream);
}